# analyzer

./: .gitignore  .graphifyignore  AGENTS.md  APPROACH.md  CLAUDE.md  Mill Drawing.drawio  README.md  TESTING.md  aag.py  analysis.py  benchmark_engines.py  brep.py  drawer.py  dxfexport.py  ejection.py  gating.py  highlights.json  index.html  input_example.py  inside_test.py  machining.py  machining_features.py  main.py  molding.py  nesting.py  pathtypes.py  pipeline.py  plans.py  pmi_edit.py  pmi_support.py  pyproject.toml  requirements.txt  server.py  sheet.py  splits.py  step_export.py  step_import.py  test_aag.py  test_accessibility.py  test_bendplan.py  (+36 more)
21007-010-rev1-240103_assy-wireless_bottom/: directions.npy  highlights.json
21007-010-rev1-240103_assy-wireless_top/: directions.npy  highlights.json
api/: app.py  ejector.py  fields.py  jobs.py  manifest.py  parts.py  plan.py  schemas.py
benchmark/: sheet_corpus.py
catalogue/machines/: cnc_3axis.yaml  laser_flatbed.yaml  pressbrake_135t.yaml
catalogue/routes/: laser_cnc_brake.yaml
docs/: BACKLOG.md  CODEMAP.md  NESTING.md  PLAN-ARCHITECTURE.md  PMI-VIEWER-EDITOR.md  RECIPES.md
frontend/: index.html  lens-walk.mjs  package-lock.json  package.json  reach-walk.mjs  report-walk.mjs  route-walk.mjs  shot_access.mjs  shot_ejector.mjs  shot_mold.mjs  shot_sprue.mjs  shot_thickness.mjs  smoke.mjs  smoke_flow.mjs  smoke_v2.mjs  smoke_v2_legend.mjs  tsconfig.json  tsconfig.tsbuildinfo  v2-smoke.mjs  v2.html  vite.config.ts
frontend/src/: App.tsx  styles.css
large_part/: directions.npy  fine_faces.npy  fine_verts.npy  highlights.json
output/: fine_faces.npy  fine_verts.npy  highlights.json  tool_faces.npy  tool_verts.npy
pressbrake/: __init__.py  adapter.py  envelope.py  foldmesh.py  meshcheck.py  model.py  plan.py  report.py  sequence.py
processes/: __init__.py  base.py  cnc.py  injection_molding.py  prep.py  resolver.py  sheet_metal.py  tube_laser.py
tests/: 3836-478-2200.stp  4113-3708-75-CAD-00006309.stp  8759-5623-9401.stp  Aligator.STEP  AligatorDrafted.stp  AligatorSingle.stp  AligatorSplit.stp  Aligator_step.stp  TestModel.stl  large_part.stl  part_asm.glb  part_asm_3.glb  testpart_42.stl  testpart_42.stp
tests/color/: CAD-00010372.stp  CAD-00010372_TOP.stp  CAD-00011237 - Copy.stp  CAD-00011237.stp  CAD-00011238.stp  CAD-00011265.stp  CAD-00011384_R00.stp  bracket_1.stp  bracket_2.stp  model3.stp  vacuum_arm.stp
tests/mch/: CAD-00009264_R03.step  CAD-00009265_R03.step  CAD-00009385_R00.step  CAD-00009386_R02.step  CAD-00009470.step  CAD-00009516_R00.step  CAD-00010996_R01.step  (+12 more)
(+131 files in other folders)
